<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<!-- Actionbar -->

	<RelativeLayout
		android:id="@+id/actionbar"
		style="@style/Actionbar" >

		<TextView
			style="@style/ActionbarTitle"
			android:text="@string/title_synchronization" />
	</RelativeLayout>

	<!-- Main view -->

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/actionbar" >

		<LinearLayout style="@style/BodyLinearLayout" >
			<Button
				android:id="@+id/button_import"
				style="@style/BodyLinearLayoutItem"
				android:text="@string/button_import_full" />

			<Button
				android:id="@+id/button_import_with_updating"
				style="@style/BodyLinearLayoutItem"
				android:text="@string/button_import_with_updating" />

			<Button
				android:id="@+id/button_import_without_updating"
				style="@style/BodyLinearLayoutItem"
				android:text="@string/button_import_without_updating" />

			<Button
				android:id="@+id/button_export"
				style="@style/BodyLinearLayoutItem"
				android:layout_marginTop="@dimen/form_button_padding"
				android:text="@string/button_export_full" />
		</LinearLayout>
	</ScrollView>

</RelativeLayout>
