<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<!-- Actionbar -->

	<RelativeLayout
		android:id="@+id/action_bar"
		style="@style/ActionBar" >

		<TextView
			style="@style/ActionBarTitle"
			android:text="@string/title_station_creation" />
	</RelativeLayout>

	<!-- Main view -->

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/action_bar" >

		<LinearLayout style="@style/BodyLinearLayout" >

			<CheckBox
				android:id="@+id/checkbox_station_exists"
				style="@style/BodyLinearLayoutItem"
				android:text="@string/signature_station_was_created"
				android:textSize="@dimen/checkbox_text_size" />

			<TextView
				style="@style/BodyLinearLayoutItem"
				android:text="@string/signature_station_name" />

			<EditText
				android:id="@+id/edit_station_name"
				style="@style/BodyLinearLayoutItem"
				android:inputType="text"
				android:singleLine="true" />

			<Button
				android:id="@+id/button_station_location"
				style="@style/BodyLinearLayoutItem"
				android:layout_marginTop="@dimen/form_button_padding"
				android:text="@string/button_set_location" />

			<Spinner
				android:id="@+id/spinner_stations"
				style="@style/BodyLinearLayoutItem"
				android:visibility="gone" />

			<TextView
				style="@style/BodyLinearLayoutItem"
				android:text="@string/signature_departure_shift_time"
				android:layout_marginTop="@dimen/departure_time_section_top_margin" />

			<TimePicker
				android:id="@+id/picker_shift_time"
				style="@style/BodyLinearLayoutItem"
				android:layout_marginTop="@dimen/time_picker_top_margin" />

			<Button
				android:id="@+id/button_confirm"
				style="@style/BodyLinearLayoutItem"
				android:layout_marginTop="@dimen/confirm_button_top_margin"
				android:text="@string/button_create_station" />
		</LinearLayout>
	</ScrollView>

</RelativeLayout>
