<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<!-- Actionbar -->

	<RelativeLayout
		android:id="@+id/actionbar"
		style="@style/Actionbar" >

		<TextView
			style="@style/ActionbarTitle"
			android:text="@string/title_stations" />

		<LinearLayout
			android:id="@+id/actions"
			style="@style/ActionbarButtons" >

			<ImageButton
				android:id="@+id/button_stations_nearby"
				style="@style/ActionbarButton"
				android:contentDescription="@string/description_enable_location_detecting"
				android:src="@drawable/ic_menu_location_disabled" />

			<ImageButton
				android:id="@+id/button_item_creation"
				style="@style/ActionbarButton"
				android:contentDescription="@string/description_item_creation"
				android:src="@drawable/ic_menu_create_item" />
		</LinearLayout>
	</RelativeLayout>

	<!-- Main view -->

	<ListView
		android:id="@android:id/list"
		style="@style/BodyListView"
		android:layout_below="@id/actionbar" />

	<TextView
		android:id="@android:id/empty"
		style="@style/BodyEmptyListViewSign"
		android:text="@string/empty_stations" />

</RelativeLayout>
