<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<!-- Actionbar -->

	<RelativeLayout
		android:id="@+id/actionbar"
		style="@style/Actionbar" >

		<TextView
			style="@style/ActionbarTitle"
			android:text="@string/title_station_creation" />
	</RelativeLayout>

	<!-- Main view -->

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/actionbar" >

		<LinearLayout style="@style/BodyLinearLayout" >

			<TextView
				style="@style/BodyLinearLayoutItem"
				android:text="@string/signature_station_name" />

			<EditText
				android:id="@+id/station_name_edit"
				style="@style/BodyLinearLayoutItem"
				android:inputType="text"
				android:singleLine="true" />

			<Button
				android:id="@+id/coordinates_button"
				style="@style/BodyLinearLayoutItem"
				android:layout_marginTop="@dimen/form_button_padding"
				android:text="@string/button_set_coordinates" />

			<Button
				android:id="@+id/confirm_button"
				style="@style/BodyLinearLayoutItem"
				android:layout_marginTop="@dimen/confirm_button_top_margin"
				android:text="@string/button_create_station" />
		</LinearLayout>
	</ScrollView>

</RelativeLayout>