<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<!-- Actionbar -->

	<RelativeLayout
		android:id="@+id/action_bar"
		style="@style/ActionBar" >

		<TextView
			style="@style/ActionBarTitle"
			android:text="@string/title_station_location" />

		<LinearLayout
			android:id="@+id/actions"
			style="@style/ActionBarButtons" >

			<ImageButton
				android:id="@+id/button_save"
				style="@style/ActionBarButton"
				android:contentDescription="@string/description_save_location"
				android:src="@drawable/ic_menu_confirm" />
		</LinearLayout>
	</RelativeLayout>

	<!-- Main view -->

	<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/action_bar" >

		<com.google.android.maps.MapView
			android:id="@+id/map"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:apiKey="@string/maps_debug_key"
			android:clickable="true" />

		<ImageView
			android:id="@+id/pin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/description_map_pin"
			android:src="@drawable/ic_pin"
			android:visibility="gone" />
	</RelativeLayout>

</RelativeLayout>
